Fix for mobile masthead height being too short

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100%;
+    width: auto;
 }
 
 .text-masthead {
